--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,10 +1,9 @@
-Jenkinsfile (Declarative Pipeline)
 pipeline {
     agent any
     stages {
         stage('build') {
             steps {
-                sh 'echo Hello World'
+                sh 'echo uat Hello World'
             }
         }
     }
